Version ??, June 1, 2020

-Ainfer now takes an argument:
 * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
 * -Ainfer=stubs uses .astub files to store the results of whole-program inference.
 * -Ainfer is deprecated but is the same as -Ainfer=jaifs, for backwards compatibility.

New command-line option:
  -AmergeStubsWithSource If both a stub file and a source file are available, use both.

Version 3.4.0, May 3, 2020

The annotated jdk8.jar is no longer used.  You should remove any occurrence of
  -Xbootclasspath/p:.../jdk8.jar
from your build scripts.  Annotations for JDK 8 are included in checker.jar.

The Returns Receiver Checker enables documenting and checking that a method
returns its receiver (i.e., the `this` parameter).

Closed issues:
3267, 3263, 3217, 3212, 3201, 3111, 3010, 2943, 2930.

---------------------------------------------------------------------------

Version 3.3.0, April 1, 2020

New command-line options:
  -Alint=trustArrayLenZero trust @ArrayLen(0) annotations when determining
  the type of Collections.toArray.

Renamings:
  -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
    The old name works temporarily but will be removed in a future release.

For collection methods with `Object` formal parameter type, such as
contains, indexOf, and remove, the annotated JDK now forbids null as an
argument.  To make the Nullness Checker permit null, pass
`-Astubs=checker.jar/collection-object-parameters-may-be-null.astub`.

The argument to @SuppressWarnings can be a substring of a message key that
extends at each end to a period or an end of the key.  (Previously, any
substring worked, including the empty string which suppressed all warnings.
Use "all" to suppress all warnings.)

All postcondition annotations are repeatable (e.g., `@EnsuresNonNull`,
`@EnsuresNonNullIf`, ...).

Renamed wrapper annotations (which users should not write):
 * `@DefaultQualifiers` => `@DefaultQualifier.List`