@@ -15,3 +15,4 @@ new.array.type.invalid=annotations %s may not be applied as component type for a
 new.class.type.invalid=the annotations %s do not need be applied in object creations
 toArray.nullable.elements.not.newarray=call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
 toArray.nullable.elements.mismatched.size=call of toArray on collection of non-null elements yields an array of possibly-null elements; cannot determine that the argument array has the same size as the receiver collection
+clear.system.property=call might clear a predefined system property; pass -Alint=permitClearProperty to permit it
