@@ -1,3 +1,7 @@
+Make special-casing of System.getProperty sound.  Use -Alint=permitClearProperty
+to disable it and to permit undefining built-in system properties.
+
+
 Version ??, June 1, 2020
 
 -Ainfer now takes an argument:
